# icode

./: .clawd-todos.json  .gitignore  Containerfile  PARITY.md  README.md  ROADMAP.md  bug-report-plan-2-2026-04-09.md
rust/: .gitignore  .icoded-todos.json  Cargo.toml  MOCK_PARITY_HARNESS.md  PARITY.md  README.md  TUI-ENHANCEMENT-PLAN.md  test_tool_validation.txt  test_tools_marker.tmp
rust/crates/acp/acp_backup/: Cargo.toml
rust/crates/acp/src/: lib.rs
rust/crates/api/: Cargo.toml
rust/crates/api/src/: client.rs  fallback_model.rs  lib.rs  prompt_cache.rs
rust/crates/api/src/providers/: anthropic.rs  azure.rs  bedrock.rs  gemini.rs  groq.rs  mistral.rs  mod.rs  openai_compat.rs  openrouter.rs  registry.rs
rust/crates/api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs
rust/crates/ast-grep-tools/: Cargo.toml
rust/crates/ast-grep-tools/src/: lib.rs  replace.rs  search.rs  types.rs
rust/crates/ast-grep-tools/tests/: ast_grep_test.rs
rust/crates/commands/: Cargo.toml
rust/crates/commands/src/: handoff.rs  init_deep.rs  lib.rs  ralph_loop.rs  start_work.rs  stop_continuation.rs  ulw_loop.rs
rust/crates/compat-harness/src/: lib.rs
rust/crates/config/: Cargo.toml
rust/crates/config/src/: jsonc.rs  lib.rs  loader.rs  schema.rs
rust/crates/config/tests/: jsonc_test.rs
rust/crates/hashline/: Cargo.toml
rust/crates/hashline/src/: apply.rs  enhance.rs  lib.rs  types.rs  validate.rs
rust/crates/hashline/tests/: hashline_test.rs
rust/crates/hooks-engine/: Cargo.toml
rust/crates/hooks-engine/src/: context.rs  dispatcher.rs  event_types.rs  hook_trait.rs  lib.rs  registry.rs
rust/crates/hooks-engine/src/hooks/: comment_checker.rs  context_window_monitor.rs  keyword_detector.rs  mod.rs  ralph_loop.rs  rules_injector.rs  session_recovery.rs  start_work.rs  think_mode.rs  todo_continuation_enforcer.rs  tool_output_truncator.rs  ultrawork.rs
rust/crates/hooks-engine/tests/: hook_engine_test.rs
rust/crates/icode-cli/: Cargo.toml
rust/crates/icode-cli/.icode/sessions/: session-newer.jsonl
rust/crates/icode-cli/src/: args.rs  format.rs  git.rs  init.rs  input.rs  main.rs  reports.rs  session_mgr.rs  update_check.rs
rust/crates/icode-cli/src/tui/: AUTOCOMPLETE_DESIGN.md  app.rs  attach.rs  autocomplete.rs  command_palette.rs  config.rs  context_suggestions.rs  debug.rs  debug_panel.rs  dialog_connect.rs  dialog_context_viz.rs  dialog_export_options.rs  dialog_fork.rs  dialog_help.rs  dialog_mcp.rs  dialog_message_actions.rs  dialog_permission.rs  dialog_plugins.rs  dialog_prompt_stash.rs  dialog_providers.rs  dialog_question.rs  dialog_session_branching.rs  dialog_sessions.rs  dialog_share.rs  dialog_skills.rs  dialog_theme_list.rs  dialog_timeline.rs  dialog_workspaces.rs  event.rs  external_editor.rs  file_picker.rs  frecency.rs  home_screen.rs  input.rs  keybinds.rs  kitty.rs  kv.rs  layout.rs  markdown.rs  mod.rs  (+15 more)
rust/crates/icode-cli/tests/: cli_flags_and_config_defaults.rs  mock_parity_harness.rs  output_format_contract.rs  resume_slash_commands.rs
rust/crates/icode-server/: Cargo.toml  build.rs
rust/crates/icode-server/icode-server_backup/: Cargo.toml
rust/crates/icode-server/icode-server_backup/src/: main.rs  state.rs
rust/crates/icode-server/src/: api_doc.rs  lib.rs  main.rs  sse.rs  state.rs
rust/crates/icode-server/src/routes/: diagnostics.rs  handlers.rs  mod.rs  schemas.rs
rust/crates/orchestration/: Cargo.toml
rust/crates/orchestration/src/: agent_config.rs  agent_registry.rs  lib.rs  model_router.rs  types.rs
rust/crates/orchestration/src/agents/: builtin.rs  mod.rs
rust/crates/orchestration/src/background/: cleanup.rs  concurrency.rs  manager.rs  mod.rs  tools.rs  types.rs
rust/crates/orchestration/src/categories/: mod.rs  (+2 more)
rust/crates/orchestration/tests/: agent_registry_test.rs  background_test.rs  background_tools_test.rs  builtin_agents_test.rs  categories_test.rs  delegation_test.rs
rust/crates/planning/: Cargo.toml
rust/crates/planning/src/: boulder.rs  constants.rs  lib.rs  notepad.rs  plan_parser.rs  types.rs
rust/crates/planning/tests/: planning_test.rs
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/migrations/: 001_initial.sql  002_server_entities.sql
rust/crates/runtime/src/: agents.rs  attachments.rs  auth_store.rs  auto_dream.rs  bash.rs  bash_validation.rs  budget.rs  compact.rs  config.rs  conversation.rs  coordinator.rs  cron_scheduler.rs  device_code.rs  doom_loop.rs  effort.rs  event_bus.rs  file_ops.rs  file_watcher.rs  hooks.rs  ipc_socket.rs  lib.rs  list_directory.rs  lsp_client.rs  lsp_discovery.rs  mcp_lifecycle_hardened.rs  mcp_oauth_flow.rs  mcp_oauth_store.rs  mcp_sse.rs  mcp_stdio.rs  mcp_streamable_http.rs  mcp_tool_bridge.rs  memdir.rs  message_parts.rs  oauth.rs  output_styles.rs  permission_enforcer.rs  permission_rules.rs  permissions.rs  persistence.rs  plugin_lifecycle.rs  (+22 more)
rust/crates/runtime/tests/: integration_tests.rs
rust/crates/rusty-claude-cli/src/: main.rs
rust/crates/session-manager/: Cargo.toml
rust/crates/session-manager/src/: info.rs  lib.rs  list.rs  read.rs  search.rs  types.rs
rust/crates/session-manager/tests/: info_test.rs  list_test.rs  read_test.rs  search_test.rs  serialization_test.rs
rust/crates/telemetry/: Cargo.toml
rust/crates/telemetry/src/: crash_report.rs  diagnostic.rs  lib.rs  paths.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: apply_patch.rs  batch_edit.rs  bundled_skills.rs  codesearch.rs  elicitation.rs  file_edit.rs  file_read.rs  file_write.rs  formatter.rs  glob_tool.rs  grep_tool.rs  invalid_tool.rs  lane_completion.rs  lib.rs  protected_files.rs  pty_bash.rs  risk.rs  skill_discovery.rs  snip_tool.rs  todo_write.rs  tool_search.rs  web_fetch.rs  web_search.rs  worktree.rs
rust/migrations/: 001_initial.sql  001_sessions.sql  002_events.sql
rust/scripts/: .icoded-todos.json  install.sh  run_mock_parity_harness.sh  test_file_ops.txt  tool_test_temp.txt
rust/scripts/.icode/sessions/: session-1775699878775-0.jsonl
(+49 files in other folders)
