[package]
name = "ast-grep-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ast-grep-core = "0.42"
ast-grep-language = "0.42"
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile = "3"

[lints]
workspace = true
