[package]
name = "icode-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "icode"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
commands = { path = "../commands" }
compat-harness = { path = "../compat-harness" }
crossterm = "0.28"
pulldown-cmark = "0.13"
ratatui = { version = "0.29", features = ["crossterm", "unstable-widget-ref"] }
unicode-width = "0.2"
color-eyre = "0.6"
strum = { version = "0.26", features = ["derive"] }
textwrap = "0.16"
rustyline = "15"
runtime = { path = "../runtime" }
plugins = { path = "../plugins" }
telemetry = { path = "../telemetry" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time"] }
tools = { path = "../tools" }
arboard = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = { workspace = true }
dirs = "6"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"

[lints]
workspace = true

[dev-dependencies]
mock-anthropic-service = { path = "../mock-anthropic-service" }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }
