[package]
name = "planning"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
