[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
cron = "0.12"
dirs.workspace = true
glob = "0.3"
hostname = "0.4"
ignore = "0.4"
notify = "7.0"
plugins = { path = "../plugins" }
portable-pty = "0.9"
regex = "1"
rusqlite.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true }
sha2.workspace = true
telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = { workspace = true }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[features]
pty-tests = []
revert-tests = []
watcher-tests = []

[lints]
workspace = true
