[package]
name = "session-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
