[package]
name = "tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
plugins = { path = "../plugins" }
runtime = { path = "../runtime" }
ignore = "0.4"
portable-pty = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
tree-sitter = "0.26"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
glob.workspace = true
regex.workspace = true
walkdir.workspace = true
libc = "0.2"

[lints]
workspace = true
